--- a/netlify.toml
+++ b/netlify.toml
@@ -17,4 +17,56 @@
   status = 200
 
 [build.processing]
+  skip_processing = true[build]
+  command = "npm install && npm run build"
+  pub
+[build]
+  command = "npm install && npm run build"
+  publish = "dist"
+  functions = "netlify/functions"
+
+[build.environment]
+  NODE_VERSION = "20"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/api/gold-news"
+  to = "/.netlify/functions/news"
+  status = 200
+
+[build.processing]
+[build]
+  command = "npm install && npm run build"
+  publish = "dist"
+  functions = "netlify/functions"
+
+[build.environment]
+  NODE_VERSION = "20"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/api/gold-news"
+  to = "/.netlify/functions/news"
+  status = 200
+
+[build.processing]
+  skip_processing = true.  skip_processing = true  functions = "netlify/functions"lish = "dist"
+
+[build.environment]
+  NODE_VERSION = "20"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[build.processing]
   skip_processing = true
