--- a/epitome-backend/pyproject.toml
+++ b/epitome-backend/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "epitome-backend"
-version = "0.2.0"
+version = "0.4.0"
 requires-python = ">=3.10"
 dependencies = [
   "fastapi>=0.111.0",
@@ -20,7 +20,9 @@ dependencies = [
   "mapie>=0.9.2",
   "arch>=6.3.0",
   "hmmlearn>=0.3.2",
-  "ruptures>=1.1.9"
+  "ruptures>=1.1.9",
+  "prometheus-client>=0.20.0",
+  "loguru>=0.7.2"
 ]
 
 [tool.setuptools.packages.find]
