--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-  "name": "gold-dashboard",
+  "name": "klevergold",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^2.12.7",
-    "papaparse": "^5.4.1",
-    "lucide-react": "^0.441.0",
-    "klinecharts": "^9.8.8",
+    "axios": "^1.7.2",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
+    "klinecharts": "^9.8.7",
     "lightweight-charts": "^4.2.1",
-  "rss-parser": "^3.13.0",
-  "node-fetch": "2.7.0",
-  "metascraper": "^5.45.25",
-  "metascraper-url": "^5.45.25",
-  "metascraper-image": "^5.45.25"
+    "lucide-react": "^0.441.0",
+    "papaparse": "^5.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.12.3"
   },
   "devDependencies": {
-    "vite": "^5.4.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "tailwindcss": "^3.4.10",
+    "autoprefixer": "^10.4.19",
     "postcss": "^8.4.41",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^3.4.10",
+    "vite": "^5.3.3"
   }
 }
