--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,10 @@ services:
   - type: web
     name: klevergold-epitome
     env: python
-    rootDir: server
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
-    healthCheckPath: /health
-    autoDeploy: true
+    rootDir: epitome-backend
+    buildCommand: pip install -U pip && pip install -e .
+    startCommand: uvicorn --app-dir src epitome_backend.main:app --host 0.0.0.0 --port $PORT
+    healthCheckPath: /docs
     envVars:
-      - key: CORS_ALLOW_ORIGINS
-        value: "*"
+      - key: PYTHON_VERSION
+        value: 3.11.9
