--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,10 @@
   directory = "netlify/functions"
   node_bundler = "esbuild"
 
-# CORS para las funciones (preflight y llamadas POST desde el frontend)
+# CORS para funciones
 [[headers]]
   for = "/.netlify/functions/*"
   [headers.values]
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Headers = "Content-Type, Authorization"
-    Access-Control-Allow-Methods = "OPTIONS, POST"
+    Access-Control-Allow-Methods = "OPTIONS, POST, GET"
