--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@xenova/transformers": "^2.15.0",
-    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "fast-xml-parser": "^4.5.0",
@@ -20,7 +19,8 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.12.3"
+    "recharts": "^2.12.3",
+    "undici": "^7.16.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
